// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FormButton /> render custom component should render the custom component 1`] = `
<div
  disabled={false}
  onClick={[Function]}
  type="submit"
/>
`;

exports[`<FormButton /> render should render without crashing 1`] = `
<button
  disabled={false}
  onClick={[Function]}
  type="submit"
/>
`;
